--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,5 +1,5 @@
 version: 2.1
-ESTE COMMIT HA SIDO ROTO POR JUAN, CULPEN A JUAN
+
 orbs:
   maven: circleci/maven@1.4.1
 executors:
@@ -12,7 +12,7 @@ jobs:
       - image: cimg/base:stable
      steps:
       - checkout 
-      - run: ESTE COMMIT HA SIDO ROTO POR JUAN, CULPEN A JUAN
+      - run: 
           name: "Say hello"
           command: "echo Hello, World!"
 
@@ -25,4 +25,4 @@ workflows:
       - maven/test:
           command: '-X compile'
           executor: java17
-ESTE COMMIT HA SIDO ROTO POR JUAN, CULPEN A JUAN
+
