--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,7 @@ version: 2.1
 # Define a job to be invoked later in a workflow.
 # See: https://circleci.com/docs/2.0/configuration-reference/#jobs
 orbs:
-  maven: circleci/maven@1.1
+  maven: circleci/maven@1.4.1
   docker: circleci/docker@1.5.0
 
 executors:
@@ -51,6 +51,8 @@ workflows:
   maven_test:
     jobs:
       - maven/test
+      command: '-X compile test'
+      executor: java17
   deploy:
     jobs:
       - publishLatestToHub
