--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,7 +23,7 @@ jobs:
            command: |
              echo "$DOCKERHUB_PASSWORD" | docker login -u "$DOCKERHUB_USERNAME" --password-stdin
              docker build -t ${DOCKERHUB_USERNAME}/$IMAGE_NAME:latest .
-             docker push ${DOCKERHUB_USERNAME}/$IMAGE_NAME:latest .
+             docker push ${DOCKERHUB_USERNAME}/$IMAGE_NAME:latest 
   say-hello:
      docker:
       - image: cimg/base:stable
